# ultralog

./: .gitignore  Makefile.am  README  cleanall.sh  configure.ac
doc/: Makefile.am
src/: Makefile.am  ultralog.cpp  ultralog.hpp  ultralog.pc.in
test/: Makefile.am  test_log.cpp
